--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -493,6 +493,9 @@ h6,
 #header6-p .mbr-section-text {
   color: #565656;
 }
+#contacts4-2 STRONG {
+  color: #ffffff;
+}
 
 
 #social-buttons1-1j .mbr-section-title {
@@ -778,6 +781,9 @@ h6,
   font-size: 36px;
 }
 
+#contacts4-e STRONG {
+  color: #ffffff;
+}
 #ext_menu-0 .hide-buttons .nav-btn {
   display: none !important;
 }
@@ -1405,4 +1411,75 @@ h6,
 #features4-1i .iconbox {
   background-color: #f2f2f2;
   border-color: #f2f2f2;
+}
+
+
+#social-buttons1-29 .mbr-section-title {
+  text-align: center;
+}
+#social-buttons1-29 .mbr-section-title SPAN {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 36px;
+}
+#ext_menu-27 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-27 .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-27 .navbar-toggler {
+  color: #000000;
+}
+#ext_menu-27 .close-icon::before,
+#ext_menu-27 .close-icon::after {
+  background-color: #000000;
+}
+#ext_menu-27 .link,
+#ext_menu-27 .dropdown-item {
+  color: #000000;
+  font-family: 'Montserrat', sans-serif;
+}
+#ext_menu-27 .link {
+  font-size: 0.85rem;
+}
+#ext_menu-27 .dropdown-item,
+#ext_menu-27 .nav-dropdown-sm .link {
+  font-size: 0.921rem;
+}
+#ext_menu-27 .link:hover,
+#ext_menu-27 .dropdown-item:hover,
+#ext_menu-27 .link:focus,
+#ext_menu-27 .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-27 .link[aria-expanded="true"],
+#ext_menu-27 .dropdown-menu {
+  background: #e6e6e6;
+}
+#ext_menu-27 .nav-dropdown-sm .link:focus,
+#ext_menu-27 .nav-dropdown-sm .link:hover,
+#ext_menu-27 .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-27 .nav-dropdown-sm .dropdown-item:hover {
+  background: #f7f7f7!important;
+}
+#ext_menu-27 .navbar,
+#ext_menu-27 .nav-dropdown-sm,
+#ext_menu-27 .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-27 .nav-dropdown-sm .dropdown-menu {
+  background: #ffffff;
+}
+#ext_menu-27 .bg-color.transparent .link {
+  color: #000000;
+  transition: none;
+}
+#ext_menu-27 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-27 .bg-color.transparent.opened .link:hover,
+#ext_menu-27 .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-27 .link[aria-expanded="true"],
+#ext_menu-27 .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
 }
