--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1483,3 +1483,286 @@ h6,
 #ext_menu-27 .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
 }
+
+#ext_menu-2a .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-2a .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-2a .navbar-toggler {
+  color: #000000;
+}
+#ext_menu-2a .close-icon::before,
+#ext_menu-2a .close-icon::after {
+  background-color: #000000;
+}
+#ext_menu-2a .link,
+#ext_menu-2a .dropdown-item {
+  color: #000000;
+  font-family: 'Montserrat', sans-serif;
+}
+#ext_menu-2a .link {
+  font-size: 0.85rem;
+}
+#ext_menu-2a .dropdown-item,
+#ext_menu-2a .nav-dropdown-sm .link {
+  font-size: 0.921rem;
+}
+#ext_menu-2a .link:hover,
+#ext_menu-2a .dropdown-item:hover,
+#ext_menu-2a .link:focus,
+#ext_menu-2a .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-2a .link[aria-expanded="true"],
+#ext_menu-2a .dropdown-menu {
+  background: #e6e6e6;
+}
+#ext_menu-2a .nav-dropdown-sm .link:focus,
+#ext_menu-2a .nav-dropdown-sm .link:hover,
+#ext_menu-2a .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-2a .nav-dropdown-sm .dropdown-item:hover {
+  background: #f7f7f7!important;
+}
+#ext_menu-2a .navbar,
+#ext_menu-2a .nav-dropdown-sm,
+#ext_menu-2a .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-2a .nav-dropdown-sm .dropdown-menu {
+  background: #ffffff;
+}
+#ext_menu-2a .bg-color.transparent .link {
+  color: #000000;
+  transition: none;
+}
+#ext_menu-2a .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-2a .bg-color.transparent.opened .link:hover,
+#ext_menu-2a .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-2a .link[aria-expanded="true"],
+#ext_menu-2a .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#features4-2c .card-subtitle {
+  color: #bcbcbc;
+}
+#features4-2c .iconbox {
+  background-color: #f2f2f2;
+  border-color: #f2f2f2;
+}
+
+
+#social-buttons1-2p .mbr-section-title {
+  text-align: center;
+}
+#social-buttons1-2p .mbr-section-title SPAN {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 36px;
+}
+#ext_menu-2d .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-2d .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-2d .navbar-toggler {
+  color: #000000;
+}
+#ext_menu-2d .close-icon::before,
+#ext_menu-2d .close-icon::after {
+  background-color: #000000;
+}
+#ext_menu-2d .link,
+#ext_menu-2d .dropdown-item {
+  color: #000000;
+  font-family: 'Montserrat', sans-serif;
+}
+#ext_menu-2d .link {
+  font-size: 0.85rem;
+}
+#ext_menu-2d .dropdown-item,
+#ext_menu-2d .nav-dropdown-sm .link {
+  font-size: 0.921rem;
+}
+#ext_menu-2d .link:hover,
+#ext_menu-2d .dropdown-item:hover,
+#ext_menu-2d .link:focus,
+#ext_menu-2d .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-2d .link[aria-expanded="true"],
+#ext_menu-2d .dropdown-menu {
+  background: #e6e6e6;
+}
+#ext_menu-2d .nav-dropdown-sm .link:focus,
+#ext_menu-2d .nav-dropdown-sm .link:hover,
+#ext_menu-2d .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-2d .nav-dropdown-sm .dropdown-item:hover {
+  background: #f7f7f7!important;
+}
+#ext_menu-2d .navbar,
+#ext_menu-2d .nav-dropdown-sm,
+#ext_menu-2d .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-2d .nav-dropdown-sm .dropdown-menu {
+  background: #ffffff;
+}
+#ext_menu-2d .bg-color.transparent .link {
+  color: #000000;
+  transition: none;
+}
+#ext_menu-2d .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-2d .bg-color.transparent.opened .link:hover,
+#ext_menu-2d .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-2d .link[aria-expanded="true"],
+#ext_menu-2d .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+
+
+#social-buttons1-2q .mbr-section-title {
+  text-align: center;
+}
+#social-buttons1-2q .mbr-section-title SPAN {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 36px;
+}
+#ext_menu-2e .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-2e .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-2e .navbar-toggler {
+  color: #000000;
+}
+#ext_menu-2e .close-icon::before,
+#ext_menu-2e .close-icon::after {
+  background-color: #000000;
+}
+#ext_menu-2e .link,
+#ext_menu-2e .dropdown-item {
+  color: #000000;
+  font-family: 'Montserrat', sans-serif;
+}
+#ext_menu-2e .link {
+  font-size: 0.85rem;
+}
+#ext_menu-2e .dropdown-item,
+#ext_menu-2e .nav-dropdown-sm .link {
+  font-size: 0.921rem;
+}
+#ext_menu-2e .link:hover,
+#ext_menu-2e .dropdown-item:hover,
+#ext_menu-2e .link:focus,
+#ext_menu-2e .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-2e .link[aria-expanded="true"],
+#ext_menu-2e .dropdown-menu {
+  background: #e6e6e6;
+}
+#ext_menu-2e .nav-dropdown-sm .link:focus,
+#ext_menu-2e .nav-dropdown-sm .link:hover,
+#ext_menu-2e .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-2e .nav-dropdown-sm .dropdown-item:hover {
+  background: #f7f7f7!important;
+}
+#ext_menu-2e .navbar,
+#ext_menu-2e .nav-dropdown-sm,
+#ext_menu-2e .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-2e .nav-dropdown-sm .dropdown-menu {
+  background: #ffffff;
+}
+#ext_menu-2e .bg-color.transparent .link {
+  color: #000000;
+  transition: none;
+}
+#ext_menu-2e .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-2e .bg-color.transparent.opened .link:hover,
+#ext_menu-2e .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-2e .link[aria-expanded="true"],
+#ext_menu-2e .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+
+
+#social-buttons1-2j .mbr-section-title {
+  text-align: center;
+}
+#social-buttons1-2j .mbr-section-title SPAN {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 36px;
+}
+#ext_menu-2f .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-2f .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-2f .navbar-toggler {
+  color: #000000;
+}
+#ext_menu-2f .close-icon::before,
+#ext_menu-2f .close-icon::after {
+  background-color: #000000;
+}
+#ext_menu-2f .link,
+#ext_menu-2f .dropdown-item {
+  color: #000000;
+  font-family: 'Montserrat', sans-serif;
+}
+#ext_menu-2f .link {
+  font-size: 0.85rem;
+}
+#ext_menu-2f .dropdown-item,
+#ext_menu-2f .nav-dropdown-sm .link {
+  font-size: 0.921rem;
+}
+#ext_menu-2f .link:hover,
+#ext_menu-2f .dropdown-item:hover,
+#ext_menu-2f .link:focus,
+#ext_menu-2f .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-2f .link[aria-expanded="true"],
+#ext_menu-2f .dropdown-menu {
+  background: #e6e6e6;
+}
+#ext_menu-2f .nav-dropdown-sm .link:focus,
+#ext_menu-2f .nav-dropdown-sm .link:hover,
+#ext_menu-2f .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-2f .nav-dropdown-sm .dropdown-item:hover {
+  background: #f7f7f7!important;
+}
+#ext_menu-2f .navbar,
+#ext_menu-2f .nav-dropdown-sm,
+#ext_menu-2f .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-2f .nav-dropdown-sm .dropdown-menu {
+  background: #ffffff;
+}
+#ext_menu-2f .bg-color.transparent .link {
+  color: #000000;
+  transition: none;
+}
+#ext_menu-2f .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-2f .bg-color.transparent.opened .link:hover,
+#ext_menu-2f .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-2f .link[aria-expanded="true"],
+#ext_menu-2f .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
